--- a/assets/css/acf-layouts.css
+++ b/assets/css/acf-layouts.css
@@ -3900,6 +3900,10 @@ details.collapse summary::-webkit-details-marker {
   margin-top: 2rem;
   margin-bottom: 2rem;
 }
+.my-6 {
+  margin-top: 1.5rem;
+  margin-bottom: 1.5rem;
+}
 .\!mb-0 {
   margin-bottom: 0px !important;
 }
@@ -4571,6 +4575,9 @@ details.collapse summary::-webkit-details-marker {
 }
 .text-center {
   text-align: center;
+}
+.text-right {
+  text-align: right;
 }
 .text-2xl {
   font-size: 1.5rem;
