--- a/assets/css/acf-layouts.css
+++ b/assets/css/acf-layouts.css
@@ -2017,6 +2017,18 @@ select {
           appearance: none;
   opacity: 0;
 }
+.collapse-content {
+  visibility: hidden;
+  grid-column-start: 1;
+  grid-row-start: 2;
+  min-height: 0px;
+  transition: visibility 0.2s;
+  transition: padding 0.2s ease-out,
+    background-color 0.2s ease-out;
+  padding-left: 1rem;
+  padding-right: 1rem;
+  cursor: unset;
+}
 .collapse[open],
 .collapse-open,
 .collapse:focus:not(.collapse-close) {
@@ -2605,6 +2617,43 @@ details.collapse summary::-webkit-details-marker {
   outline-offset: 2px;
   outline-color: hsl(var(--bc) / 1);
 }
+.collapse-arrow > .collapse-title:after {
+  position: absolute;
+  display: block;
+  height: 0.5rem;
+  width: 0.5rem;
+  --tw-translate-y: -100%;
+  --tw-rotate: 45deg;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+  transition-property: all;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-timing-function: cubic-bezier(0, 0, 0.2, 1);
+  transition-duration: 150ms;
+  transition-duration: 0.2s;
+  top: 50%;
+  right: 1.4rem;
+  content: "";
+  transform-origin: 75% 75%;
+  box-shadow: 2px 2px;
+  pointer-events: none;
+}
+[dir="rtl"] .collapse-arrow > .collapse-title:after {
+  --tw-rotate: -45deg;
+}
+.collapse-plus > .collapse-title:after {
+  position: absolute;
+  display: block;
+  height: 0.5rem;
+  width: 0.5rem;
+  transition-property: all;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-timing-function: cubic-bezier(0, 0, 0.2, 1);
+  transition-duration: 300ms;
+  top: 0.9rem;
+  right: 1.4rem;
+  content: "+";
+  pointer-events: none;
+}
 .collapse:not(.collapse-open):not(.collapse-close) > input[type="checkbox"],
 .collapse:not(.collapse-open):not(.collapse-close) > input[type="radio"]:not(:checked),
 .collapse:not(.collapse-open):not(.collapse-close) > .collapse-title {
@@ -2612,6 +2661,9 @@ details.collapse summary::-webkit-details-marker {
 }
 .collapse:focus:not(.collapse-open):not(.collapse-close):not(.collapse[open]) > .collapse-title {
   cursor: unset;
+}
+.collapse-title {
+  position: relative;
 }
 :where(.collapse > input[type="checkbox"]),
 :where(.collapse > input[type="radio"]) {
@@ -3854,6 +3906,9 @@ details.collapse summary::-webkit-details-marker {
 .top-\[87px\] {
   top: 87px;
 }
+.left-1\/2 {
+  left: 50%;
+}
 .z-0 {
   z-index: 0;
 }
@@ -3880,6 +3935,9 @@ details.collapse summary::-webkit-details-marker {
 }
 .col-span-7 {
   grid-column: span 7 / span 7;
+}
+.float-none {
+  float: none;
 }
 .m-8 {
   margin: 2rem;
@@ -3951,6 +4009,9 @@ details.collapse summary::-webkit-details-marker {
 }
 .mb-10 {
   margin-bottom: 2.5rem;
+}
+.mt-16 {
+  margin-top: 4rem;
 }
 .line-clamp-2 {
   overflow: hidden;
@@ -4090,6 +4151,9 @@ details.collapse summary::-webkit-details-marker {
 .max-w-\[420px\] {
   max-width: 420px;
 }
+.max-w-screen-lg {
+  max-width: 1024px;
+}
 .flex-none {
   flex: none;
 }
@@ -4116,6 +4180,9 @@ details.collapse summary::-webkit-details-marker {
 }
 .scroll-mt-36 {
   scroll-margin-top: 9rem;
+}
+.scroll-mt-32 {
+  scroll-margin-top: 8rem;
 }
 .list-decimal {
   list-style-type: decimal;
@@ -4286,6 +4353,12 @@ details.collapse summary::-webkit-details-marker {
 }
 .border-t {
   border-top-width: 1px;
+}
+.border-b-2 {
+  border-bottom-width: 2px;
+}
+.border-l {
+  border-left-width: 1px;
 }
 .border-solid {
   border-style: solid;
@@ -4479,6 +4552,14 @@ details.collapse summary::-webkit-details-marker {
 .px-12 {
   padding-left: 3rem;
   padding-right: 3rem;
+}
+.px-0 {
+  padding-left: 0px;
+  padding-right: 0px;
+}
+.py-5 {
+  padding-top: 1.25rem;
+  padding-bottom: 1.25rem;
 }
 .pb-16 {
   padding-bottom: 4rem;
@@ -5588,6 +5669,10 @@ details.collapse summary::-webkit-details-marker {
   --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(0px + var(--tw-ring-offset-width)) var(--tw-ring-color);
   box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
 }
+.prose-strong\:text-white :is(:where(strong):not(:where([class~="not-prose"],[class~="not-prose"] *))) {
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+}
 @media (min-width: 782px) {
 
   .md\:my-6 {
@@ -5641,11 +5726,20 @@ details.collapse summary::-webkit-details-marker {
     font-size: 1.875rem;
     line-height: 2.25rem;
   }
+
+  .md\:text-2xl {
+    font-size: 1.5rem;
+    line-height: 2rem;
+  }
 }
 @media (min-width: 1024px) {
 
   .lg\:mt-0 {
     margin-top: 0px;
+  }
+
+  .lg\:mb-16 {
+    margin-bottom: 4rem;
   }
 
   .lg\:flex {
@@ -5825,6 +5919,10 @@ details.collapse summary::-webkit-details-marker {
 
   .lg\:text-\[50px\] {
     font-size: 50px;
+  }
+
+  .lg\:text-\[34px\] {
+    font-size: 34px;
   }
 }
 @media (min-width: 1280px) {
