--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -3915,6 +3915,9 @@ details.collapse summary::-webkit-details-marker {
 .mt-16 {
   margin-top: 4rem;
 }
+.mt-0 {
+  margin-top: 0px;
+}
 .line-clamp-2 {
   overflow: hidden;
   display: -webkit-box;
@@ -4124,6 +4127,9 @@ details.collapse summary::-webkit-details-marker {
 }
 .gap-8 {
   gap: 2rem;
+}
+.gap-6 {
+  gap: 1.5rem;
 }
 .gap-x-0 {
   -moz-column-gap: 0px;
@@ -4348,6 +4354,10 @@ details.collapse summary::-webkit-details-marker {
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+.bg-gray-100 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(243 244 246 / var(--tw-bg-opacity));
 }
 .bg-opacity-40 {
   --tw-bg-opacity: 0.4;
