--- a/assets/css/editor-style.css
+++ b/assets/css/editor-style.css
@@ -2258,6 +2258,9 @@ details.collapse summary::-webkit-details-marker {
 .mt-16 {
     margin-top: 4rem;
 }
+.mt-0 {
+    margin-top: 0px;
+}
 .line-clamp-2 {
     overflow: hidden;
     display: -webkit-box;
@@ -2470,6 +2473,9 @@ details.collapse summary::-webkit-details-marker {
 }
 .gap-8 {
     gap: 2rem;
+}
+.gap-6 {
+    gap: 1.5rem;
 }
 .gap-x-0 {
     -moz-column-gap: 0px;
@@ -2700,6 +2706,10 @@ details.collapse summary::-webkit-details-marker {
 .bg-blue-600 {
     --tw-bg-opacity: 1;
     background-color: rgb(37 99 235 / var(--tw-bg-opacity));
+}
+.bg-gray-100 {
+    --tw-bg-opacity: 1;
+    background-color: rgb(243 244 246 / var(--tw-bg-opacity));
 }
 .bg-opacity-40 {
     --tw-bg-opacity: 0.4;
