--- a/assets/css/acf-layouts.css
+++ b/assets/css/acf-layouts.css
@@ -3689,6 +3689,9 @@ details.collapse summary::-webkit-details-marker {
 .aspect-h-8 {
   --tw-aspect-h: 8;
 }
+.aspect-h-9 {
+  --tw-aspect-h: 9;
+}
 .aspect-w-1 {
   position: relative;
   padding-bottom: calc(var(--tw-aspect-h) / var(--tw-aspect-w) * 100%);
@@ -3730,9 +3733,6 @@ details.collapse summary::-webkit-details-marker {
   right: 0;
   bottom: 0;
   left: 0;
-}
-.aspect-h-9 {
-  --tw-aspect-h: 9;
 }
 .visible {
   visibility: visible;
@@ -3823,10 +3823,6 @@ details.collapse summary::-webkit-details-marker {
 .my-3 {
   margin-top: 0.75rem;
   margin-bottom: 0.75rem;
-}
-.my-6 {
-  margin-top: 1.5rem;
-  margin-bottom: 1.5rem;
 }
 .my-8 {
   margin-top: 2rem;
@@ -3952,9 +3948,6 @@ details.collapse summary::-webkit-details-marker {
 .w-1\/4 {
   width: 25%;
 }
-.w-10 {
-  width: 2.5rem;
-}
 .w-16 {
   width: 4rem;
 }
@@ -4009,14 +4002,14 @@ details.collapse summary::-webkit-details-marker {
 .max-w-screen-4xl {
   max-width: 1760px;
 }
+.max-w-screen-lg {
+  max-width: 1024px;
+}
 .max-w-screen-xl {
   max-width: 1280px;
 }
 .max-w-sm {
   max-width: 24rem;
-}
-.max-w-screen-lg {
-  max-width: 1024px;
 }
 .flex-none {
   flex: none;
@@ -4033,10 +4026,6 @@ details.collapse summary::-webkit-details-marker {
 }
 .translate-x-full {
   --tw-translate-x: 100%;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-.rotate-180 {
-  --tw-rotate: 180deg;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 .cursor-pointer {
@@ -4311,6 +4300,10 @@ details.collapse summary::-webkit-details-marker {
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+.bg-gray-700 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(55 65 81 / var(--tw-bg-opacity));
 }
 .bg-opacity-40 {
   --tw-bg-opacity: 0.4;
@@ -5232,10 +5225,6 @@ details.collapse summary::-webkit-details-marker {
   --tw-translate-y: -0.25rem;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
-.hover\:bg-white:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-}
 .hover\:bg-opacity-60:hover {
   --tw-bg-opacity: 0.6;
 }
@@ -5244,10 +5233,6 @@ details.collapse summary::-webkit-details-marker {
 }
 .hover\:font-semibold:hover {
   font-weight: 600;
-}
-.hover\:text-gray-500:hover {
-  --tw-text-opacity: 1;
-  color: rgb(107 114 128 / var(--tw-text-opacity));
 }
 .hover\:text-primary:hover {
   --tw-text-opacity: 1;
@@ -5614,16 +5599,8 @@ details.collapse summary::-webkit-details-marker {
     height: 1.5rem;
   }
 
-  .\32xl\:h-\[412px\] {
-    height: 412px;
-  }
-
   .\32xl\:h-\[512px\] {
     height: 512px;
-  }
-
-  .\32xl\:h-\[312px\] {
-    height: 312px;
   }
 
   .\32xl\:w-5 {
