--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -3793,6 +3793,12 @@ details.collapse summary::-webkit-details-marker {
 .inset-0 {
   inset: 0px;
 }
+.-left-4 {
+  left: -1rem;
+}
+.-right-4 {
+  right: -1rem;
+}
 .bottom-0 {
   bottom: 0px;
 }
@@ -3816,18 +3822,6 @@ details.collapse summary::-webkit-details-marker {
 }
 .top-\[87px\] {
   top: 87px;
-}
-.-left-2 {
-  left: -0.5rem;
-}
-.-right-2 {
-  right: -0.5rem;
-}
-.-left-4 {
-  left: -1rem;
-}
-.-right-4 {
-  right: -1rem;
 }
 .z-0 {
   z-index: 0;
@@ -3878,10 +3872,6 @@ details.collapse summary::-webkit-details-marker {
 .my-8 {
   margin-top: 2rem;
   margin-bottom: 2rem;
-}
-.mx-6 {
-  margin-left: 1.5rem;
-  margin-right: 1.5rem;
 }
 .\!mb-0 {
   margin-bottom: 0px !important;
@@ -4000,35 +3990,17 @@ details.collapse summary::-webkit-details-marker {
 .h-8 {
   height: 2rem;
 }
+.h-\[200px\] {
+  height: 200px;
+}
 .h-full {
   height: 100%;
 }
 .h-screen {
   height: 100vh;
 }
-.h-\[400px\] {
-  height: 400px;
-}
-.h-\[240px\] {
-  height: 240px;
-}
-.h-\[200px\] {
-  height: 200px;
-}
-.h-\[160px\] {
-  height: 160px;
-}
-.h-\[180px\] {
-  height: 180px;
-}
 .min-h-screen {
   min-height: 100vh;
-}
-.w-1\/2 {
-  width: 50%;
-}
-.w-1\/3 {
-  width: 33.333333%;
 }
 .w-1\/4 {
   width: 25%;
@@ -4039,9 +4011,6 @@ details.collapse summary::-webkit-details-marker {
 .w-16 {
   width: 4rem;
 }
-.w-2\/3 {
-  width: 66.666667%;
-}
 .w-2\/5 {
   width: 40%;
 }
@@ -4051,14 +4020,14 @@ details.collapse summary::-webkit-details-marker {
 .w-3\/5 {
   width: 60%;
 }
+.w-32 {
+  width: 8rem;
+}
 .w-5 {
   width: 1.25rem;
 }
 .w-8 {
   width: 2rem;
-}
-.w-\[148px\] {
-  width: 148px;
 }
 .w-\[235px\] {
   width: 235px;
@@ -4071,9 +4040,6 @@ details.collapse summary::-webkit-details-marker {
 }
 .w-full {
   width: 100%;
-}
-.w-32 {
-  width: 8rem;
 }
 .max-w-\[420px\] {
   max-width: 420px;
@@ -4171,10 +4137,6 @@ details.collapse summary::-webkit-details-marker {
 .gap-x-2 {
   -moz-column-gap: 0.5rem;
        column-gap: 0.5rem;
-}
-.gap-x-20 {
-  -moz-column-gap: 5rem;
-       column-gap: 5rem;
 }
 .gap-x-3 {
   -moz-column-gap: 0.75rem;
@@ -4457,6 +4419,10 @@ details.collapse summary::-webkit-details-marker {
   padding-top: 0.25rem;
   padding-bottom: 0.25rem;
 }
+.py-12 {
+  padding-top: 3rem;
+  padding-bottom: 3rem;
+}
 .py-16 {
   padding-top: 4rem;
   padding-bottom: 4rem;
@@ -4484,10 +4450,6 @@ details.collapse summary::-webkit-details-marker {
 .py-8 {
   padding-top: 2rem;
   padding-bottom: 2rem;
-}
-.py-12 {
-  padding-top: 3rem;
-  padding-bottom: 3rem;
 }
 .pb-0 {
   padding-bottom: 0px;
@@ -4561,9 +4523,6 @@ details.collapse summary::-webkit-details-marker {
 .pt-2 {
   padding-top: 0.5rem;
 }
-.pt-20 {
-  padding-top: 5rem;
-}
 .pt-24 {
   padding-top: 6rem;
 }
@@ -4609,9 +4568,6 @@ details.collapse summary::-webkit-details-marker {
 }
 .text-\[40px\] {
   font-size: 40px;
-}
-.text-\[45px\] {
-  font-size: 45px;
 }
 .text-base {
   font-size: 1rem;
@@ -5104,6 +5060,51 @@ html {
 .swiper-button-lock {
   display: none;
 }
+.subscribe-form .with_frm_style input[type='text'],
+  .subscribe-form .with_frm_style input[type='password'],
+  .subscribe-form .with_frm_style input[type='email'],
+  .subscribe-form .with_frm_style input[type='number'],
+  .subscribe-form .with_frm_style input[type='url'],
+  .subscribe-form .with_frm_style input[type='tel'],
+  .subscribe-form .with_frm_style input[type='file'],
+  .subscribe-form .with_frm_style input[type='search'],
+  .subscribe-form .with_frm_style select,
+  .subscribe-form .with_frm_style .frm-card-element.StripeElement {
+  border-radius: 9999px;
+}
+.subscribe-form .frm_style_formidable-style.with_frm_style
+    .frm_compact
+    .frm_dropzone.dz-clickable
+    .dz-message,
+  .subscribe-form .frm_style_formidable-style.with_frm_style input[type='submit'],
+  .subscribe-form .frm_style_formidable-style.with_frm_style .frm_submit input[type='button'],
+  .subscribe-form .frm_style_formidable-style.with_frm_style .frm_submit button,
+  .subscribe-form .frm_form_submit_style,
+  .subscribe-form .frm_style_formidable-style.with_frm_style .frm-edit-page-btn {
+  border-radius: 9999px;
+  --tw-bg-opacity: 1;
+  background-color: rgb(31 41 55 / var(--tw-bg-opacity));
+  --tw-shadow: 0 0 #0000;
+  --tw-shadow-colored: 0 0 #0000;
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, -webkit-backdrop-filter;
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter;
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter, -webkit-backdrop-filter;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
+.subscribe-form .frm_style_formidable-style.with_frm_style
+    .frm_compact
+    .frm_dropzone.dz-clickable
+    .dz-message:hover,
+  .subscribe-form .frm_style_formidable-style.with_frm_style input[type='submit']:hover,
+  .subscribe-form .frm_style_formidable-style.with_frm_style .frm_submit input[type='button']:hover,
+  .subscribe-form .frm_style_formidable-style.with_frm_style .frm_submit button:hover,
+  .subscribe-form .frm_form_submit_style:hover,
+  .subscribe-form .frm_style_formidable-style.with_frm_style .frm-edit-page-btn:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
+}
 @media (min-width: 1024px) {
 
   .lg\:prose-lg {
@@ -5353,15 +5354,15 @@ html {
     margin-bottom: 0;
   }
 }
-.after\:text-lg::after {
-  content: var(--tw-content);
-  font-size: 1.125rem;
-  line-height: 1.75rem;
-}
 .after\:text-2xl::after {
   content: var(--tw-content);
   font-size: 1.5rem;
   line-height: 2rem;
+}
+.after\:text-lg::after {
+  content: var(--tw-content);
+  font-size: 1.125rem;
+  line-height: 1.75rem;
 }
 .after\:content-\[\'next\'\]::after {
   --tw-content: 'next';
@@ -5420,14 +5421,14 @@ html {
 }
 @media (min-width: 782px) {
 
-  .md\:my-6 {
-    margin-top: 1.5rem;
-    margin-bottom: 1.5rem;
-  }
-
   .md\:my-12 {
     margin-top: 3rem;
     margin-bottom: 3rem;
+  }
+
+  .md\:my-6 {
+    margin-top: 1.5rem;
+    margin-bottom: 1.5rem;
   }
 
   .md\:-ml-0 {
@@ -5492,14 +5493,14 @@ html {
     padding-right: 1.5rem;
   }
 
-  .md\:py-3 {
-    padding-top: 0.75rem;
-    padding-bottom: 0.75rem;
-  }
-
   .md\:py-20 {
     padding-top: 5rem;
     padding-bottom: 5rem;
+  }
+
+  .md\:py-3 {
+    padding-top: 0.75rem;
+    padding-bottom: 0.75rem;
   }
 
   .md\:pt-12 {
@@ -5527,20 +5528,20 @@ html {
 }
 @media (min-width: 1024px) {
 
-  .lg\:left-4 {
-    left: 1rem;
-  }
-
-  .lg\:right-4 {
-    right: 1rem;
-  }
-
   .lg\:left-2 {
     left: 0.5rem;
   }
 
+  .lg\:left-4 {
+    left: 1rem;
+  }
+
   .lg\:right-2 {
     right: 0.5rem;
+  }
+
+  .lg\:right-4 {
+    right: 1rem;
   }
 
   .lg\:col-span-6 {
@@ -5550,11 +5551,6 @@ html {
   .lg\:my-8 {
     margin-top: 2rem;
     margin-bottom: 2rem;
-  }
-
-  .lg\:mx-0 {
-    margin-left: 0px;
-    margin-right: 0px;
   }
 
   .lg\:-mt-24 {
@@ -5645,16 +5641,16 @@ html {
     width: 58.333333%;
   }
 
+  .lg\:w-\[148px\] {
+    width: 148px;
+  }
+
   .lg\:w-\[30\%\] {
     width: 30%;
   }
 
   .lg\:w-\[70\%\] {
     width: 70%;
-  }
-
-  .lg\:w-\[148px\] {
-    width: 148px;
   }
 
   .lg\:max-w-none {
@@ -5696,6 +5692,11 @@ html {
          column-gap: 4rem;
   }
 
+  .lg\:gap-x-20 {
+    -moz-column-gap: 5rem;
+         column-gap: 5rem;
+  }
+
   .lg\:gap-x-3 {
     -moz-column-gap: 0.75rem;
          column-gap: 0.75rem;
@@ -5719,11 +5720,6 @@ html {
     row-gap: 2.5rem;
   }
 
-  .lg\:gap-x-20 {
-    -moz-column-gap: 5rem;
-         column-gap: 5rem;
-  }
-
   .lg\:divide-x > :not([hidden]) ~ :not([hidden]) {
     --tw-divide-x-reverse: 0;
     border-right-width: calc(1px * var(--tw-divide-x-reverse));
@@ -5742,6 +5738,11 @@ html {
 
   .lg\:p-6 {
     padding: 1.5rem;
+  }
+
+  .lg\:px-0 {
+    padding-left: 0px;
+    padding-right: 0px;
   }
 
   .lg\:px-10 {
@@ -5782,11 +5783,6 @@ html {
   .lg\:py-8 {
     padding-top: 2rem;
     padding-bottom: 2rem;
-  }
-
-  .lg\:px-0 {
-    padding-left: 0px;
-    padding-right: 0px;
   }
 
   .lg\:pb-0 {
@@ -5893,6 +5889,10 @@ html {
     font-size: 22px;
   }
 
+  .lg\:text-\[45px\] {
+    font-size: 45px;
+  }
+
   .lg\:text-\[50px\] {
     font-size: 50px;
   }
@@ -5913,10 +5913,6 @@ html {
 
   .lg\:text-xl {
     font-size: 1.25rem;
-  }
-
-  .lg\:text-\[45px\] {
-    font-size: 45px;
   }
 
   .lg\:leading-tight {
