--- a/assets/css/acf-layouts.css
+++ b/assets/css/acf-layouts.css
@@ -5634,6 +5634,12 @@ details.collapse summary::-webkit-details-marker {
 .hover\:no-underline:hover {
   text-decoration-line: none;
 }
+.hover\:opacity-60:hover {
+  opacity: 0.6;
+}
+.hover\:opacity-70:hover {
+  opacity: 0.7;
+}
 .hover\:shadow-\[0_3px_12px_rgba\(0\2c 0\2c 0\2c 0\.24\)\]:hover {
   --tw-shadow: 0 3px 12px rgba(0,0,0,0.24);
   --tw-shadow-colored: 0 3px 12px var(--tw-shadow-color);
