--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -4078,6 +4078,15 @@ details.collapse summary::-webkit-details-marker {
 .cursor-pointer {
   cursor: pointer;
 }
+.-scroll-m-24 {
+  scroll-margin: -6rem;
+}
+.scroll-m-24 {
+  scroll-margin: 6rem;
+}
+.scroll-m-16 {
+  scroll-margin: 4rem;
+}
 .scroll-mt-36 {
   scroll-margin-top: 9rem;
 }
@@ -5661,6 +5670,10 @@ html {
 
   .lg\:max-w-none {
     max-width: none;
+  }
+
+  .lg\:scroll-m-24 {
+    scroll-margin: 6rem;
   }
 
   .lg\:grid-cols-3 {
