--- a/assets/css/editor-style.css
+++ b/assets/css/editor-style.css
@@ -2292,6 +2292,15 @@ details.collapse summary::-webkit-details-marker {
 .cursor-pointer {
     cursor: pointer;
 }
+.-scroll-m-24 {
+    scroll-margin: -6rem;
+}
+.scroll-m-24 {
+    scroll-margin: 6rem;
+}
+.scroll-m-16 {
+    scroll-margin: 4rem;
+}
 .scroll-mt-36 {
     scroll-margin-top: 9rem;
 }
@@ -3725,6 +3734,9 @@ body {
     }
     .lg\:max-w-none {
         max-width: none;
+    }
+    .lg\:scroll-m-24 {
+        scroll-margin: 6rem;
     }
     .lg\:grid-cols-3 {
         grid-template-columns: repeat(3, minmax(0, 1fr));
