--- a/resources/css/partials/content-blocks.css
+++ b/resources/css/partials/content-blocks.css
@@ -52,6 +52,6 @@
   .frm_style_formidable-style.with_frm_style .frm_submit button,
   .frm_form_submit_style,
   .frm_style_formidable-style.with_frm_style .frm-edit-page-btn {
-    @apply shadow-none rounded-full bg-gray-800 hover:bg-black transition;
+    @apply shadow-none rounded-full bg-gray-800 border-none hover:bg-black transition;
   }
 }
