--- a/assets/css/acf-layouts.css
+++ b/assets/css/acf-layouts.css
@@ -6380,6 +6380,10 @@ details.collapse summary::-webkit-details-marker {
 }
 @media (min-width: 1536px) {
 
+  .\33xl\:h-\[600px\] {
+    height: 600px;
+  }
+
   .\33xl\:gap-x-4 {
     -moz-column-gap: 1rem;
          column-gap: 1rem;
