--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -6119,6 +6119,10 @@ html {
 }
 @media (min-width: 1536px) {
 
+  .\33xl\:h-\[600px\] {
+    height: 600px;
+  }
+
   .\33xl\:gap-x-4 {
     -moz-column-gap: 1rem;
          column-gap: 1rem;
