--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -3999,6 +3999,9 @@ details.collapse summary::-webkit-details-marker {
 .h-screen {
   height: 100vh;
 }
+.h-\[600px\] {
+  height: 600px;
+}
 .min-h-screen {
   min-height: 100vh;
 }
