--- a/assets/css/editor-style.css
+++ b/assets/css/editor-style.css
@@ -3550,6 +3550,29 @@ body {
     --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(0px + var(--tw-ring-offset-width)) var(--tw-ring-color);
     box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
 }
+.prose-p\:text-black :is(:where(p):not(:where([class~="not-prose"],[class~="not-prose"] *))) {
+    --tw-text-opacity: 1;
+    color: rgb(0 0 0 / var(--tw-text-opacity));
+}
+.prose-a\:hover\:no-underline:hover :is(:where(a):not(:where([class~="not-prose"],[class~="not-prose"] *))) {
+    text-decoration-line: none;
+}
+.prose-strong\:text-black :is(:where(strong):not(:where([class~="not-prose"],[class~="not-prose"] *))) {
+    --tw-text-opacity: 1;
+    color: rgb(0 0 0 / var(--tw-text-opacity));
+}
+.prose-ol\:text-black :is(:where(ol):not(:where([class~="not-prose"],[class~="not-prose"] *))) {
+    --tw-text-opacity: 1;
+    color: rgb(0 0 0 / var(--tw-text-opacity));
+}
+.prose-ul\:text-black :is(:where(ul):not(:where([class~="not-prose"],[class~="not-prose"] *))) {
+    --tw-text-opacity: 1;
+    color: rgb(0 0 0 / var(--tw-text-opacity));
+}
+.prose-li\:my-1 :is(:where(li):not(:where([class~="not-prose"],[class~="not-prose"] *))) {
+    margin-top: 0.25rem;
+    margin-bottom: 0.25rem;
+}
 @media (min-width: 782px) {
     .md\:my-6 {
         margin-top: 1.5rem;
