--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -3891,6 +3891,9 @@ details.collapse summary::-webkit-details-marker {
 .mb-12 {
   margin-bottom: 3rem;
 }
+.mb-2 {
+  margin-bottom: 0.5rem;
+}
 .mb-4 {
   margin-bottom: 1rem;
 }
@@ -3932,6 +3935,9 @@ details.collapse summary::-webkit-details-marker {
 }
 .mt-auto {
   margin-top: auto;
+}
+.mb-3 {
+  margin-bottom: 0.75rem;
 }
 .line-clamp-2 {
   overflow: hidden;
@@ -3999,9 +4005,6 @@ details.collapse summary::-webkit-details-marker {
 .h-screen {
   height: 100vh;
 }
-.h-\[600px\] {
-  height: 600px;
-}
 .min-h-screen {
   min-height: 100vh;
 }
@@ -4043,6 +4046,9 @@ details.collapse summary::-webkit-details-marker {
 }
 .w-full {
   width: 100%;
+}
+.max-w-4xl {
+  max-width: 56rem;
 }
 .max-w-\[420px\] {
   max-width: 420px;
@@ -4297,6 +4303,10 @@ details.collapse summary::-webkit-details-marker {
   --tw-border-opacity: 1;
   border-color: rgb(255 255 255 / var(--tw-border-opacity));
 }
+.bg-\[\#232C39\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(35 44 57 / var(--tw-bg-opacity));
+}
 .bg-\[\#4A4A4A\]\/70 {
   background-color: rgb(74 74 74 / 0.7);
 }
@@ -4507,6 +4517,9 @@ details.collapse summary::-webkit-details-marker {
 }
 .pr-2 {
   padding-right: 0.5rem;
+}
+.pr-4 {
+  padding-right: 1rem;
 }
 .pr-6 {
   padding-right: 1.5rem;
@@ -5410,6 +5423,11 @@ html {
   --tw-shadow-colored: 0 3px 12px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
+.hover\:shadow-xl:hover {
+  --tw-shadow: 0 20px 25px -5px rgb(0 0 0 / 0.1), 0 8px 10px -6px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 20px 25px -5px var(--tw-shadow-color), 0 8px 10px -6px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
 .focus\:border-none:focus {
   border-style: none;
 }
@@ -5428,9 +5446,6 @@ html {
 .prose-p\:text-black :is(:where(p):not(:where([class~="not-prose"],[class~="not-prose"] *))) {
   --tw-text-opacity: 1;
   color: rgb(0 0 0 / var(--tw-text-opacity));
-}
-.prose-a\:hover\:no-underline:hover :is(:where(a):not(:where([class~="not-prose"],[class~="not-prose"] *))) {
-  text-decoration-line: none;
 }
 .prose-strong\:text-black :is(:where(strong):not(:where([class~="not-prose"],[class~="not-prose"] *))) {
   --tw-text-opacity: 1;
@@ -5502,6 +5517,10 @@ html {
 
   .md\:flex-row {
     flex-direction: row;
+  }
+
+  .md\:flex-nowrap {
+    flex-wrap: nowrap;
   }
 
   .md\:gap-6 {
@@ -5773,6 +5792,10 @@ html {
     padding: 1.5rem;
   }
 
+  .lg\:p-8 {
+    padding: 2rem;
+  }
+
   .lg\:px-0 {
     padding-left: 0px;
     padding-right: 0px;
@@ -5856,6 +5879,10 @@ html {
 
   .lg\:pr-12 {
     padding-right: 3rem;
+  }
+
+  .lg\:pr-8 {
+    padding-right: 2rem;
   }
 
   .lg\:pt-0 {
